--- a/Login-page/login.html
+++ b/Login-page/login.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+  
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>WomenRise3T Login</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Vesper+Libre:wght@400;500;700;900&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="login.css" />
 </head>
 <body>
   
+<div class="container login-container">
+  <div class="row align-items-center">
+    <div class="col-md-6 login-image">
+      <img src="Mask-group-1.webp" alt="Login Image">
+    </div>
+    <div class="col-md-6">
+      <div class="login-form">
+        <h3 class="mb-4 text-center"><img src="WomenRise3T Logo - Original - 5000x5000.png" width="65px" height="55px">WomenRise3T</h3>
+        <form>
+          <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" placeholder="Enter your email">
+          </div>
+          <div class="mb-3">
+            <label for="password" class="form-label">Password</label>
+            <input type="password" class="form-control" id="password" placeholder="Enter your password">
+          </div>
+          <div class="mb-3 text-start">
+            <a href="#" class="primary-link">Lupa password</a>
+          </div>
+          <button type="submit" class="btn btn-primary w-100">Log In</button>
+        </form>
+        <div class="mt-3 text-center">
+          <span>Belum punya akun? <a href="#" class="primary-link">Sign up</a></span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
 </body>
 </html>
