--- a/Login-page/login.html
+++ b/Login-page/login.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Vesper+Libre:wght@400;500;700;900&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="login.css" />
+  <script src="login.js" defer></script>
 </head>
 <body>
   
@@ -21,6 +22,7 @@
     <div class="col-md-6">
       <div class="login-form">
         <h3 class="mb-4 text-center"><img src="WomenRise3T Logo - Original - 5000x5000.png" width="65px" height="55px">WomenRise3T</h3>
+        <div id="error-message"></div>
         <form>
           <div class="mb-3">
             <label for="email" class="form-label">Email</label>
@@ -30,10 +32,11 @@
             <label for="password" class="form-label">Password</label>
             <input type="password" class="form-control" id="password" placeholder="Enter your password">
           </div>
+          
           <div class="mb-3 text-start">
             <a href="#" class="primary-link">Lupa password</a>
           </div>
-          <button type="submit" class="btn btn-primary w-100">Log In</button>
+          <button type="submit" class="btn btn-primary w-100" id = "btn-login">Log In</button>
         </form>
         <div class="mt-3 text-center">
           <span>Belum punya akun? <a href="#" class="primary-link">Sign up</a></span>
