--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <body>
     <!-- Navigation Menu -->
     <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid px-5 mx-5 d-flex ">
+        <div class="container-fluid px-5 mx-5 d-flex gap-5">
             
-                <div class="d-flex align-items-end ">
+                <div class="d-flex gap-2 align-items-center">
                     <img src="gambar/Logo WomenRise3T.svg" width="48" height="auto">
-                    <a href="#"><div class="vesper-libre-bold">WomenRise3T</div></a>
+                    <a href="#"><div class="vesper-libre-bold pt-2" id="nav-title">WomenRise3T</div></a>
                 </div>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,16 +28,16 @@
                 </button>
                 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav navbar-text gap-5 flex-grow-1">
+                    <ul class="navbar-nav navbar-text gap-5 flex-grow-1 ms-5">
                         <li class="nav-item ">Home</li>
                         <li class="nav-item">Beasiswa</li>
                         <li class="nav-item">Mentor</li>
                         <li class="nav-item">Donasi</li>
                     </ul>
 
-                    <div class="navbar-text">
-                        <a href="">Sign Up</a>
-                        <a href="">Log In</a>
+                    <div class="d-flex gap-2 align-items-center">
+                        <a class="btn button-style-signup" href="">Sign Up</a>
+                        <a class="btn button-style-login px-3 py-2" href="">Log In</a>
                     </div>
                 </div>
             </div>
