updated navbar lists and added border bottom

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </head>
 <body>
     <!-- Navigation Menu -->
-    <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid px-5 mx-5 d-flex gap-5">
+    <nav class="navbar navbar-expand-lg border-bottom">
+        <div class="container-fluid px-5 py-2 mx-5 d-flex gap-5">
             
                 <div class="d-flex gap-2 align-items-center">
                     <img src="gambar/Logo WomenRise3T.svg" width="48" height="auto">
@@ -29,10 +29,10 @@
                 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav navbar-text gap-5 flex-grow-1 ms-5">
-                        <li class="nav-item ">Home</li>
-                        <li class="nav-item">Beasiswa</li>
-                        <li class="nav-item">Mentor</li>
-                        <li class="nav-item">Donasi</li>
+                        <li class="nav-item "><a href="">Home</a></li>
+                        <li class="nav-item"><a href="">Beasiswa</a></li>
+                        <li class="nav-item"><a href="">Mentor</a></li>
+                        <li class="nav-item"><a href="">Donasi</a></li>
                     </ul>
 
                     <div class="d-flex gap-2 align-items-center">
