--- a/mentor.html
+++ b/mentor.html
@@ -83,8 +83,14 @@
 
           <div class="search">
             <h3 class="text-muted py-3 ">Cari Mentor</h3>
-            <input type="text" name="" id="">
-          </div>
+
+            <div class="input-group">
+              <span class="input-group-text" id="basic-addon1">
+                <i class="bi bi-search"></i>
+              </span>
+              <input type="text" class="form-control" placeholder="Nama Mentor" aria-label="Search"
+                aria-describedby="basic-addon1">
+            </div>
 
 
         </section>
