--- a/mentor.html
+++ b/mentor.html
@@ -12,10 +12,45 @@
 </head>
 
 <body>
+  <!-- Navigation Menu -->
+  <nav class="navbar navbar-expand-lg border-bottom">
+    <div class="container-fluid px-5 py-2 mx-5 d-flex gap-5">
+
+      <div class="d-flex gap-2 align-items-center">
+        <img src="gambar/Logo WomenRise3T.svg" width="48" height="auto">
+        <a href="#">
+          <div class="vesper-libre-bold pt-2" id="nav-title">WomenRise3T</div>
+        </a>
+      </div>
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav navbar-text gap-5 flex-grow-1 ms-5">
+          <li class="nav-item "><a href="">Home</a></li>
+          <li class="nav-item"><a href="">Beasiswa</a></li>
+          <li class="nav-item"><a href="">Mentor</a></li>
+          <li class="nav-item"><a href="">Donasi</a></li>
+        </ul>
+
+        <div class="d-flex gap-2 align-items-center">
+          <a class="btn button-style-signup" href="">Sign Up</a>
+          <a class="btn button-style-login px-3 py-2" href="">Log In</a>
+        </div>
+      </div>
+    </div>
+    </div>
+  </nav>
+
+  <!-- content -->
   <div class="container">
     <h2 class="text-blue">Mentor - mentor kami</h2>
     <p class="text-muted">Pilih mentor sesuai kebutuhanmu dan mulai sesi mentoring sekarang</p>
     <div class="row gy-2">
+      <!-- content left -->
       <div class="col-3">
         <section class="container">
           <!-- kategori dropdown menu 1 -->
@@ -80,10 +115,10 @@
               </div>
             </div>
           </div>
-
+          <!-- Cari Mentor -->
           <div class="search">
             <h3 class="text-muted py-3 ">Cari Mentor</h3>
-
+            <!-- input search mentor -->
             <div class="input-group">
               <span class="input-group-text" id="basic-addon1">
                 <i class="bi bi-search"></i>
@@ -91,8 +126,6 @@
               <input type="text" class="form-control" placeholder="Nama Mentor" aria-label="Search"
                 aria-describedby="basic-addon1">
             </div>
-
-
         </section>
       </div>
 
