--- a/mentor.html
+++ b/mentor.html
@@ -5,10 +5,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Mentor</title>
+  <link rel="icon" type="image/x-icon" href="gambar/Logo WomenRise3T.svg">
   <link rel="stylesheet" href="mentor.css">
+
+  <!-- bootstrap css and bootstrap icon -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+  <!-- Font Logo -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Vesper+Libre:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -45,16 +53,18 @@
     </div>
   </nav>
 
-  <!-- content -->
+  <!-- Content -->
   <div class="container">
     <h2 class="text-blue">Mentor - mentor kami</h2>
     <p class="text-muted">Pilih mentor sesuai kebutuhanmu dan mulai sesi mentoring sekarang</p>
-    <div class="row gy-2">
-      <!-- content left -->
-      <div class="col-3">
-        <section class="container">
+
+    <!-- grid -->
+    <div class="container">
+      <div class="row">
+        <!-- Content Left -->
+        <div class="col-3">
           <!-- kategori dropdown menu 1 -->
-          <div class="kategori">
+          <section class="kategori">
             <h3 class="text-muted py-3 ">Kategori</h3>
             <div class="dropdown">
               <a class="nav-link border-bottom d-flex justify-content-between" role="button" data-bs-toggle="collapse"
@@ -99,24 +109,25 @@
                 data-bs-target="#dropdownAccordion3" aria-expanded="false" aria-controls="dropdownAccordion">Jurusan<i
                   class="bi bi-chevron-down" id="arrow"></i></a>
               <div class="collapse" id="dropdownAccordion3">
-                <div> <label for="NTB">
-                    <input type="checkbox" name="daerah-3T" id="NTB"> STEM
+                <div> <label for="stem">
+                    <input type="checkbox" name="jurusan" id="stem"> STEM
                   </label>
                 </div>
-                <div> <label for="NTT">
-                    <input type="checkbox" value="daerah-3T" id="NTT"> Keuangan
+                <div> <label for="keuangan">
+                    <input type="checkbox" value="jurusan" id="keuangan"> Keuangan
                   </label></div>
-                <div> <label for="Sulteng">
-                    <input type="checkbox" value="daerah-3T" id="Sulteng"> Pemasaran
+                <div> <label for="pemasaran">
+                    <input type="checkbox" value="jurusan" id="pemasaran"> Pemasaran
                   </label></div>
-                <div> <label for="Maluku">
-                    <input type="checkbox" value="daerah-3T" id="Maluku"> Kesehatan
+                <div> <label for="kesehatan">
+                    <input type="checkbox" value="jurusan" id="kesehatan"> Kesehatan
                   </label></div>
               </div>
             </div>
-          </div>
+          </section>
+
           <!-- Cari Mentor -->
-          <div class="search">
+          <section class="search d-none d-lg-block" id="search-mentor">
             <h3 class="text-muted py-3 ">Cari Mentor</h3>
             <!-- input search mentor -->
             <div class="input-group">
@@ -126,21 +137,63 @@
               <input type="text" class="form-control" placeholder="Nama Mentor" aria-label="Search"
                 aria-describedby="basic-addon1">
             </div>
-        </section>
+          </section>
+        </div>
+
+        <div class="col-1"></div>
+
+
+
+        <!-- Content Right -->
+        <div class="col-8">
+          <h3 class="text-blue py-3">Daftar Mentor</h3>
+          <!-- card mentor -->
+
+          <!-- layar besar -->
+          <div id="card-large">
+            <div class="card container d-none d-lg-block">
+              <div class="row">
+                <div class="col-5"><img
+                    src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/142/680/original/136268.jpg?1725867071"
+                    class="rounded img-fluid mt-3 d-flex " alt="..."></div>
+                <div class="col-7">
+                  <div class="card-body">
+                    <h5 class="card-title my-1">Indah Lestari</h5>
+                    <h6 class="my-0">Institut Teknologi Bandung</h6>
+                    <p class="nav-item border-bottom my-1">Maluku utara</p>
+                    <p class="card-text">Indah adalah salah satu perempuan inspiratif dari Maluku Utara yang telah
+                      menorehkan berbagai prestasi gemilang di ITB.
+                    </p>
+                    <div class="text-end">
+                      <a href="#" class="btn" id="btn-more">Selengkapnya <i class="bi bi-arrow-right"></i></a>
+                      <a href="#" class="btn" id="btn-register">Daftar</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- layar kecil -->
+          <div class="card d-block d-lg-none " style="width: 18rem;">
+            <img
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/142/680/original/136268.jpg?1725867071"
+              class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+
+
+        </div>
       </div>
 
-
-
-      <div class="col-9">
-
-
-
-      </div>
-    </div>
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
