--- a/mentor.html
+++ b/mentor.html
@@ -151,7 +151,7 @@
 
           <!-- layar besar -->
           <div id="card-large">
-            <div class="card container d-none d-lg-block">
+            <!-- <div class="card container d-none d-lg-block">
               <div class="row">
                 <div class="col-5"><img
                     src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/142/680/original/136268.jpg?1725867071"
@@ -161,17 +161,20 @@
                     <h5 class="card-title my-1">Indah Lestari</h5>
                     <h6 class="my-0">Institut Teknologi Bandung</h6>
                     <p class="nav-item border-bottom my-1">Maluku utara</p>
-                    <p class="card-text">Indah adalah salah satu perempuan inspiratif dari Maluku Utara yang telah
+                    <p class="card-text text-justify">Indah adalah salah satu perempuan inspiratif dari Maluku
+                      Utara
+                      yang
+                      telah
                       menorehkan berbagai prestasi gemilang di ITB.
                     </p>
                     <div class="text-end">
-                      <a href="#" class="btn" id="btn-more">Selengkapnya <i class="bi bi-arrow-right"></i></a>
+                      <a href="#" class="btn " id="btn-more">Selengkapnya <i class="bi bi-arrow-right"></i></a>
                       <a href="#" class="btn" id="btn-register">Daftar</a>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
           <!-- layar kecil -->
           <div class="card d-block d-lg-none " style="width: 18rem;">
@@ -194,6 +197,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+      <script src="mentor.js"></script>
 </body>
 
 </html>
