--- a/mentor/mentor.html
+++ b/mentor/mentor.html
@@ -127,14 +127,14 @@
           </section>
 
           <!-- Cari Mentor -->
-          <section class="search d-none d-lg-block" id="search-mentor">
+          <section class="search d-none d-lg-block" id="cari-mentor">
             <h3 class="text-muted py-3 ">Cari Mentor</h3>
             <!-- input search mentor -->
             <div class="input-group">
               <span class="input-group-text" id="basic-addon1">
                 <i class="bi bi-search"></i>
               </span>
-              <input type="text" class="form-control" placeholder="Nama Mentor" aria-label="Search"
+              <input type="search" class="form-control" placeholder="Nama Mentor" id="search-mentor" aria-label="Search"
                 aria-describedby="basic-addon1">
             </div>
           </section>
@@ -149,33 +149,10 @@
           <h3 class="text-blue py-3">Daftar Mentor</h3>
           <!-- card mentor -->
 
-          <!-- layar besar -->
+          <!-- layar besar using DOM JS -->
           <div id="card-large">
-            <!-- <div class="card container d-none d-lg-block">
-              <div class="row">
-                <div class="col-5"><img
-                    src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/142/680/original/136268.jpg?1725867071"
-                    class="rounded img-fluid mt-3 d-flex " alt="..."></div>
-                <div class="col-7">
-                  <div class="card-body">
-                    <h5 class="card-title my-1">Indah Lestari</h5>
-                    <h6 class="my-0">Institut Teknologi Bandung</h6>
-                    <p class="nav-item border-bottom my-1">Maluku utara</p>
-                    <p class="card-text text-justify">Indah adalah salah satu perempuan inspiratif dari Maluku
-                      Utara
-                      yang
-                      telah
-                      menorehkan berbagai prestasi gemilang di ITB.
-                    </p>
-                    <div class="text-end">
-                      <a href="#" class="btn " id="btn-more">Selengkapnya <i class="bi bi-arrow-right"></i></a>
-                      <a href="#" class="btn" id="btn-register">Daftar</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div> -->
           </div>
+
           <!-- layar kecil -->
           <div class="card d-block d-lg-none " style="width: 18rem;">
             <img
