--- a/mentor/mentor.html
+++ b/mentor/mentor.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="gambar/Logo WomenRise3T.svg">
   <link rel="stylesheet" href="mentor.css">
 
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
   <!-- bootstrap css and bootstrap icon -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -55,14 +57,30 @@
 
   <!-- Content -->
   <div class="container">
-    <h2 class="text-blue">Mentor - mentor kami</h2>
-    <p class="text-muted">Pilih mentor sesuai kebutuhanmu dan mulai sesi mentoring sekarang</p>
+    <div data-aos="fade-down" data-aos-duration="1000">
+      <h2 class="text-blue">Mentor - mentor kami</h2>
+      <p class="text-muted">Pilih mentor sesuai kebutuhanmu dan mulai sesi mentoring sekarang</p>
+    </div>
+
+    <!-- cari mentor di layar kecil -->
+    <section class="search d-block d-lg-none" id="cari-mentor" data-aos="fade-down" data-aos-duration="1000">
+      <h3 class="text-muted py-3 ">Cari Mentor</h3>
+      <!-- input search mentor -->
+      <div class="input-group">
+        <span class="input-group-text" id="basic-addon1">
+          <i class="bi bi-search"></i>
+        </span>
+        <input type="search" class="form-control" placeholder="Nama Mentor" id="search-mentor" aria-label="Search"
+          aria-describedby="basic-addon1">
+      </div>
+    </section>
+
 
     <!-- grid -->
     <div class="container">
       <div class="row">
         <!-- Content Left -->
-        <div class="col-3">
+        <div class="col-3" data-aos="fade-up" data-aos-duration="1000">
           <!-- kategori dropdown menu 1 -->
           <section class="kategori">
             <h3 class="text-muted py-3 ">Kategori</h3>
@@ -140,13 +158,14 @@
           </section>
         </div>
 
+        <!-- jarak -->
         <div class="col-1"></div>
 
 
 
         <!-- Content Right -->
         <div class="col-8">
-          <h3 class="text-blue py-3">Daftar Mentor</h3>
+          <h3 class="text-blue py-3" data-aos="fade-left" data-aos-duration="1500">Daftar Mentor</h3>
           <!-- card mentor -->
 
           <!-- layar besar using DOM JS -->
@@ -154,16 +173,11 @@
           </div>
 
           <!-- layar kecil -->
-          <div class="card d-block d-lg-none " style="width: 18rem;">
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/142/680/original/136268.jpg?1725867071"
-              class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.
-              </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+          <div class="container-fluid" id="card-small">
+            <div class="row g-3">
+              <div class="col-sm-12 col-md-6" id="card-small">
+
+              </div>
             </div>
           </div>
 
@@ -174,6 +188,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
       <script src="mentor.js"></script>
 </body>
 
