--- a/mentor/mentor.html
+++ b/mentor/mentor.html
@@ -62,7 +62,7 @@
       <p class="text-muted">Pilih mentor sesuai kebutuhanmu dan mulai sesi mentoring sekarang</p>
     </div>
 
-    <!-- cari mentor di layar kecil -->
+    <!-- cari mentor di layar besar -->
     <section class="search d-block d-lg-none" id="cari-mentor" data-aos="fade-down" data-aos-duration="1000">
       <h3 class="text-muted py-3 ">Cari Mentor</h3>
       <!-- input search mentor -->
@@ -70,7 +70,7 @@
         <span class="input-group-text" id="basic-addon1">
           <i class="bi bi-search"></i>
         </span>
-        <input type="search" class="form-control" placeholder="Nama Mentor" id="search-mentor" aria-label="Search"
+        <input type="search" class="form-control" placeholder="Nama Mentor" aria-label="Search"
           aria-describedby="basic-addon1">
       </div>
     </section>
