add content detail selengkapnya per id mentor by fetching

--- a/mentor/mentor.html
+++ b/mentor/mentor.html
@@ -71,7 +71,7 @@
           <i class="bi bi-search"></i>
         </span>
         <input type="search" class="form-control" placeholder="Nama Mentor" aria-label="Search"
-          aria-describedby="basic-addon1">
+          aria-describedby="basic-addon1" autofocus autocomplete="off">
       </div>
     </section>
 
