--- a/profile-mentor/profile.html
+++ b/profile-mentor/profile.html
@@ -53,51 +53,31 @@
     </div>
   </nav>
 
-  <div class="container">
-    <h1 class="text-center my-5 text-blue">Informasi Mentor</h1>
+  <div class="container my-5">
+    <h1 class="text-center mb-5 text-blue">Informasi Mentor</h1>
     <div class="row">
+      <!-- konten kiri -->
       <div class="col-md-7 col-sm-12">
-        <h3 class="text-blue">Indah - Mentor WomenRise3T</h3>
-        <p class="my-1">Wilayah asal: Maluku Utara</p>
-        <p class="my-1">Pendidikan institut Teknologi Bandung</p>
-        <p class="text-justify my-3">Indah adalah salah satu perempuan inspiratif dari Maluku Utara yang telah
-          menorehkan
-          berbagai prestasi
-          gemilang di ITB.
-          Dengan latar belakang sebagai penerima beasiswa penuh, Indah tidak hanya unggul dalam bidang akademik tetapi
-          juga aktif
-          dalam berbagai kegiatan sosial dan organisasi mahasiswa.</p>
-        <p>Prestasi:</p>
-        <ul class="text-justify">
-          <li>Lulusan Terbaik di Fakultas Teknik Sipil dan Lingkungan ITB.</li>
-          <li>Ketua Komunitas Mahasiswa 3T di ITB, yang berhasil menggalang dana untuk membantu pendidikan anak-anak di
-            wilayah 3T.</li>
-          <li>Pemenang Lomba Inovasi Teknologi tingkat nasional dengan proyek pengembangan infrastruktur berkelanjutan
-            di daerah
-            terpencil.</li>
-        </ul>
+        <section class="informasi-mentor" id="informasi-mentor">
+        </section>
+
+        <section class="mentoring mt-5" id="jadwal-mentoring">
+        </section>
+
+
       </div>
+
+      <!-- jarak -->
       <div class="col-md-1 d-none d-md-block"></div>
-      <div class="col-md-4 col-sm-12">
 
-        <div class="card" style="width: 18rem;">
-          <img
-            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/142/769/original/89425.jpg?1725895794"
-            class="card-img-top p-3" alt="...">
-          <div class="card-body text-center">
-            <h5 class="card-title">Indah Lestari</h5>
-            <h6 class="mb-5">Maluku utara</h6>
-
-            <a href="#" class="btn" id="btn-register"> <i class="bi bi-check2-square"></i> Daftar Mentorship <i
-                class="bi bi-arrow-right"></i></a>
-          </div>
-        </div>
-
-
-
-
+      <!-- content kanan -->
+      <div class="col-md-4" id="content-right">
       </div>
+
+
     </div>
+
+
   </div>
 
   <script src="profile.js"></script>
