--- a/booking-page/booking.html
+++ b/booking-page/booking.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Vesper+Libre:wght@400;500;700;900&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="booking.css" />
-  <script src="login.js" defer></script>
+  <script src="booking.js" defer></script>
 </head>
 
 <body>
@@ -57,15 +57,18 @@
           <div class="mb-4">
             <label for="name" class="form-label">Nama</label>
             <input type="name" class="form-control" id="name" placeholder="Enter your name">
-          </div>
-          <div class="mb-4">
+            <div class="text-danger" id="nameError"></div> 
+        </div>
+        <div class="mb-4">
             <label for="email" class="form-label">Email</label>
             <input type="email" class="form-control" id="email" placeholder="Enter your email">
-          </div>
-          <div class="mb-4">
+            <div class="text-danger" id="emailError"></div> 
+        </div>
+        <div class="mb-4">
             <label for="number" class="form-label">No. Handphone(WA)</label>
-            <input type="number" class="form-control" id="noHp" placeholder="Enter your phone number">
-          </div>
+            <input type="number" class="form-control" id="phone" placeholder="Enter your phone number">
+            <div class="text-danger" id="phoneError"></div> 
+        </div>
           
           <button type="submit" class="btn btn-primary w-100" id = "btnBooking">Book Jadwal Mentor</button>
         </form>
