--- a/Ellena/index.html
+++ b/Ellena/index.html
@@ -46,8 +46,32 @@
     </nav>
 
     <!-- Hero Section -->
-    
+    <section>
+        <div class="container">
+            <h1>Hello</h1>
+        </div>
+    </section>
 
+    <!-- Footer -->
+     <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div>
+                        <img src="gambar/Logo WomenRise3T.svg" width="40" height="auto">
+                        WomenRise
+                    </div>
+                    <p>Jalan Inspirasi No. 123, Jakarta, Indonesia</p>
+                    <p>Telepon: +62 8123 456 7890</p>
+                </div>
+                    
+                <div class="col">
+                    Get Help</div>
+                <div class="col">Our Program</div>
+                <div class="col">Company</div>
+            </div>
+        </div>
+     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
