--- a/Landing-page/index.html
+++ b/Landing-page/index.html
@@ -53,23 +53,44 @@
     </section>
 
     <!-- Footer -->
-     <footer>
+     <footer class="border-top">
         <div class="container">
-            <div class="row">
-                <div class="col">
-                    <div>
-                        <img src="gambar/Logo WomenRise3T.svg" width="40" height="auto">
-                        WomenRise
+            <!-- row  -->
+            <div class="row pt-5 pb-4">
+                <div class="col-sm-4">
+                    <div class="vesper-libre-bold mb-3">
+                        <img src="gambar/Logo WomenRise3T.svg" width="32" height="auto">
+                        WomenRise3T
                     </div>
-                    <p>Jalan Inspirasi No. 123, Jakarta, Indonesia</p>
-                    <p>Telepon: +62 8123 456 7890</p>
+                    <div class="text-body-tertiary">Jalan Inspirasi No. 123, Jakarta, Indonesia</div>
+                    <div class="text-body-tertiary mb-3">Telepon: +62 8123 456 7890</div>
+                    <a href=""><img src="gambar/icon/facebook.svg" class="me-2" width="24" height="24"></a>
+                    <a href=""><img src="gambar/icon/instagram.svg" width="24" height="24"></a>
                 </div>
                     
-                <div class="col">
-                    Get Help</div>
-                <div class="col">Our Program</div>
-                <div class="col">Company</div>
+                <div class="col-sm col-md">
+                    <p>Get Help</p>
+                    <a class="text-body-tertiary" href=""><p>FAQ</p></a>
+                    <a class="text-body-tertiary" href=""><p>Contact us</p></a>
+                    <a class="text-body-tertiary" href=""><p>Support us</p></a>
+
+                </div>
+                <div class="col-sm col-md">
+                    <p>Our Program</p>
+                    <a class="text-body-tertiary" href=""><p>Mentorship</p></a>
+                    <a class="text-body-tertiary" href=""><p>Scholarship</p></a>
+                    <a class="text-body-tertiary" href=""><p>Community</p></a>
+                </div>
+                <div class="col-sm col-md">
+                    <p>Company</p>
+                    <a class="text-body-tertiary" href=""><p>About us</p></a>
+                    <a class="text-body-tertiary" href=""><p>Our Team</p></a>
+                    <a class="text-body-tertiary" href=""><p>Our Impact</p></a>
+                </div>
             </div>
+            <!-- pembatas dgn copyright -->
+            <hr>
+            <p class="text-body-tertiary"> &copy; 2024 WomenRise3T. All Rights Reserved.</p>
         </div>
      </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
