--- a/profile-mentor/profile.html
+++ b/profile-mentor/profile.html
@@ -60,11 +60,8 @@
       <div class="col-md-7 col-sm-12">
         <section class="informasi-mentor" id="informasi-mentor">
         </section>
-
         <section class="mentoring mt-5" id="jadwal-mentoring">
         </section>
-
-
       </div>
 
       <!-- jarak -->
@@ -73,13 +70,9 @@
       <!-- content kanan -->
       <div class="col-md-4" id="content-right">
       </div>
-
-
     </div>
-
-
   </div>
-
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="profile.js"></script>
 </body>
 
