edit-confirm,booking,js

--- a/booking-page/confirm-page/confirm.html
+++ b/booking-page/confirm-page/confirm.html
@@ -20,7 +20,7 @@
     <div class="container-fluid px-5 py-2 mx-5 d-flex gap-5">
         
             <div class="d-flex gap-2 align-items-center">
-                <img src="gambar/Logo WomenRise3T.svg" width="48" height="auto">
+                <img src="Logo WomenRise3T.svg" width="48" height="auto">
                 <a href="#"><div class="vesper-libre-bold pt-2" id="nav-title">WomenRise3T</div></a>
             </div>
 
