--- a/booking-page/booking.html
+++ b/booking-page/booking.html
@@ -77,6 +77,47 @@
     </div>
   </div>
 
+ <!-- Footer -->
+ <footer class="border-top">
+  <div class="container">
+      <!-- row  -->
+      <div class="row pt-5 pb-4">
+          <div class="col-sm-4">
+              <div class="vesper-libre-bold mb-3">
+                  <img src="gambar/Logo WomenRise3T.svg" width="32" height="auto">
+                  WomenRise3T
+              </div>
+              <div class="text-body-tertiary">Jalan Inspirasi No. 123, Jakarta, Indonesia</div>
+              <div class="text-body-tertiary mb-3">Telepon: +62 8123 456 7890</div>
+              <a href=""><img src="gambar/icon/facebook.svg" class="me-2" width="24" height="24"></a>
+              <a href=""><img src="gambar/icon/instagram.svg" width="24" height="24"></a>
+          </div>
+              
+          <div class="col-sm col-md">
+              <p>Get Help</p>
+              <a class="text-body-tertiary" href=""><p>FAQ</p></a>
+              <a class="text-body-tertiary" href=""><p>Contact us</p></a>
+              <a class="text-body-tertiary" href=""><p>Support us</p></a>
+
+          </div>
+          <div class="col-sm col-md">
+              <p>Our Program</p>
+              <a class="text-body-tertiary" href=""><p>Mentorship</p></a>
+              <a class="text-body-tertiary" href=""><p>Scholarship</p></a>
+              <a class="text-body-tertiary" href=""><p>Community</p></a>
+          </div>
+          <div class="col-sm col-md">
+              <p>Company</p>
+              <a class="text-body-tertiary" href=""><p>About us</p></a>
+              <a class="text-body-tertiary" href=""><p>Our Team</p></a>
+              <a class="text-body-tertiary" href=""><p>Our Impact</p></a>
+          </div>
+      </div>
+      <!-- pembatas dgn copyright -->
+      <hr>
+      <p class="text-body-tertiary"> &copy; 2024 WomenRise3T. All Rights Reserved.</p>
+  </div>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
