--- a/booking-page/booking.html
+++ b/booking-page/booking.html
@@ -56,17 +56,17 @@
         <form>
           <div class="mb-4">
             <label for="name" class="form-label">Nama</label>
-            <input type="name" class="form-control" id="name" placeholder="Enter your name">
+            <input type="name" class="form-control" id="name" placeholder="masukkan nama anda">
             <div class="text-danger" id="nameError"></div> 
         </div>
         <div class="mb-4">
             <label for="email" class="form-label">Email</label>
-            <input type="email" class="form-control" id="email" placeholder="Enter your email">
+            <input type="email" class="form-control" id="email" placeholder="masukkan email anda">
             <div class="text-danger" id="emailError"></div> 
         </div>
         <div class="mb-4">
             <label for="number" class="form-label">No. Handphone(WA)</label>
-            <input type="number" class="form-control" id="phone" placeholder="Enter your phone number">
+            <input type="number" class="form-control" id="phone" placeholder="masukkan nomor handphone anda">
             <div class="text-danger" id="phoneError"></div> 
         </div>
           
