done hero section, added gutters to footer

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
                 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav navbar-text gap-5 flex-grow-1 ms-5">
-                        <li class="nav-item "><a href="">Home</a></li>
+                        <li class="nav-item "><a href="#">Home</a></li>
                         <li class="nav-item"><a href="">Beasiswa</a></li>
-                        <li class="nav-item"><a href="">Mentor</a></li>
+                        <li class="nav-item"><a href="mentor/mentor.html">Mentor</a></li>
                         <li class="nav-item"><a href="">Donasi</a></li>
                     </ul>
 
                     <div class="d-flex gap-2 align-items-center">
-                        <a class="btn button-style-signup" href="">Sign Up</a>
-                        <a class="btn button-style-login px-3 py-2" href="">Log In</a>
+                        <a class="btn button-style-text" href="">Sign Up</a>
+                        <a class="btn button-style-navy px-3 py-2" href="">Log In</a>
                     </div>
                 </div>
             </div>
@@ -46,9 +46,22 @@
     </nav>
 
     <!-- Hero Section -->
-    <section>
+    <section class="background-lightblue">
         <div class="container">
-            <h1>Hello</h1>
+            <div class="row align-items-center py-5">
+                <div class="col-7 d-inline-flex flex-column gap-3">
+                    <h1 class="fw-bold ">Raih Masa Depanmu bersama <span class="button-style-text">WomenRise3T</span></h1>
+                    <p class="text-body-secondary">Meraih impian melalui pendidikan dan kesempatan beasiswa. Bergabunglah bersama kami dan dapatkan bimbingan yang kamu butuhkan untuk sukses.</p>
+                    <div>
+                        <a class="button-style-navy px-3 py-2 me-4" href="">Lihat Beasiswa</a>
+                        <a class="button-style-text text-dark" href="mentor/mentor.html">Temukan Mentor <img src="gambar/arrow-right.svg"></a>
+                    </div>
+                    
+                </div>
+                <div class="col">
+                    <img src="gambar/girl.svg">
+                </div>
+            </div>
         </div>
     </section>
 
@@ -56,7 +69,7 @@
      <footer class="border-top">
         <div class="container">
             <!-- row  -->
-            <div class="row pt-5 pb-4">
+            <div class="row pt-5 pb-4 gy-4 ">
                 <div class="col-sm-4">
                     <div class="vesper-libre-bold mb-3">
                         <img src="gambar/Logo WomenRise3T.svg" width="32" height="auto">
