--- a/mentor/mentor.html
+++ b/mentor/mentor.html
@@ -40,7 +40,7 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav navbar-text gap-5 flex-grow-1 ms-5">
-          <li class="nav-item "><a href="" class="text-decoration-none">Home</a></li>
+          <li class="nav-item "><a href="../index.html" class="text-decoration-none">Home</a></li>
           <li class="nav-item"><a href="" class="text-decoration-none">Beasiswa</a></li>
           <li class="nav-item"><a href="" class="text-decoration-none">Mentor</a></li>
           <li class="nav-item"><a href="" class="text-decoration-none">Donasi</a></li>
