--- a/booking-page/booking.html
+++ b/booking-page/booking.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Vesper+Libre:wght@400;500;700;900&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="booking.css" />
   <script src="booking.js" defer></script>
 </head>
@@ -46,9 +46,7 @@
 </nav>
 
 <!--Booking Form-->
-
-
-  <div class="row align-items-center">
+  <div class="row align-items-center bg-custom">
     <div class="col-md-5 ">
       <div class="booking-form">
         <h3 class="mb-3 text-center vesper-libre-bold pt-2"><img src="gambar/Logo WomenRise3T.svg" width="40" height="auto"> WomenRise3T</h3>
@@ -118,7 +116,7 @@
       <p class="text-body-tertiary"> &copy; 2024 WomenRise3T. All Rights Reserved.</p>
   </div>
 </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
 </body>
