--- a/profile-mentor/profile.html
+++ b/profile-mentor/profile.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Profile Mentor</title>
   <link rel="stylesheet" href="profile.css">
+  <link rel="icon" type="image/x-icon" href="gambar/Logo WomenRise3T.svg">
 
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
