fixed hero section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="container px-5 px-md-0">
             <div class="row align-items-center py-5">
 
-                <div class="col col-sm-7 d-inline-flex flex-column gap-3">
+                <div class="col-lg-7 d-inline-flex flex-column gap-3">
                     <h1 class="fw-bold ">Raih Masa Depanmu bersama <span class="button-style-text">WomenRise3T</span></h1>
                     <p class="text-body-secondary">Meraih impian melalui pendidikan dan kesempatan beasiswa. Bergabunglah bersama kami dan dapatkan bimbingan yang kamu butuhkan untuk sukses.</p>
                     <div class="mb-5 d-inline-flex align-items-center">
@@ -59,8 +59,8 @@
                     </div>                 
                 </div>
 
-                <div class="col col-sm">
-                    <img width="auto" height="auto" src="gambar/girl.svg">
+                <div class="col-lg-3">
+                    <img src="gambar/girl.svg">
                 </div>
             </div>
         </div>
