--- a/mentor/mentor.html
+++ b/mentor/mentor.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Mentor</title>
   <link rel="icon" type="image/x-icon" href="gambar/Logo WomenRise3T.svg">
+  <link rel="stylesheet" href="../style.css ">
   <link rel="stylesheet" href="mentor.css">
 
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -23,37 +24,7 @@
 
 <body>
   <!-- Navigation Menu -->
-  <nav class="navbar navbar-expand-lg border-bottom">
-    <div class="container-fluid px-5 py-2 mx-5 d-flex gap-5">
-
-      <div class="d-flex gap-2 align-items-center">
-        <img src="gambar/Logo WomenRise3T.svg" width="48" height="auto">
-        <a href="#" class="text-decoration-none">
-          <div class="vesper-libre-bold pt-2" id="nav-title">WomenRise3T</div>
-        </a>
-      </div>
-
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav navbar-text gap-5 flex-grow-1 ms-5">
-          <li class="nav-item "><a href="../index.html" class="text-decoration-none">Home</a></li>
-          <li class="nav-item"><a href="" class="text-decoration-none">Beasiswa</a></li>
-          <li class="nav-item"><a href="" class="text-decoration-none fw-bold" id="mentor-nav">Mentor</a></li>
-          <li class="nav-item"><a href="" class="text-decoration-none">Donasi</a></li>
-        </ul>
-
-        <div class="d-flex gap-2 align-items-center">
-          <a class="btn text-blue text-decoration-none" id="button-style-signup" href="">Sign Up</a>
-          <a class="btn px-3 py-2 text-decoration-none" id="button-style-login" href="">Log In</a>
-        </div>
-      </div>
-    </div>
-    </div>
-  </nav>
+   <div id="navbar"></div>
 
   <!-- Content -->
   <div class="container my-5">
@@ -188,71 +159,14 @@
     </div>
   </div>
   <!-- footer -->
-  <footer class="border-top" data-aos="fade-up" data-aos-duration="1500">
-    <div class="container">
-      <!-- row  -->
-      <div class="row pt-5 pb-4">
-        <div class="col-sm-4">
-          <div class="vesper-libre-bold mb-3">
-            <img src="gambar/Logo WomenRise3T.svg" width="32" height="auto">
-            WomenRise3T
-          </div>
-          <div class="text-body-tertiary">Jalan Inspirasi No. 123, Jakarta, Indonesia</div>
-          <div class="text-body-tertiary mb-3">Telepon: +62 8123 456 7890</div>
-          <a href="" class="text-decoration-none"><img src="gambar/icon/facebook.svg" class="me-2" width="24"
-              height="24"></a>
-          <a href="" class="text-decoration-none"><img src="gambar/icon/instagram.svg" width="24" height="24"></a>
-        </div>
-
-        <div class="col-sm col-md">
-          <p>Get Help</p>
-          <a class="text-body-tertiary text-decoration-none" href="">
-            <p>FAQ</p>
-          </a>
-          <a class="text-body-tertiary text-decoration-none" href="">
-            <p>Contact us</p>
-          </a>
-          <a class="text-body-tertiary text-decoration-none" href="">
-            <p>Support us</p>
-          </a>
-
-        </div>
-        <div class="col-sm col-md">
-          <p>Our Program</p>
-          <a class="text-body-tertiary text-decoration-none" href="">
-            <p>Mentorship</p>
-          </a>
-          <a class="text-body-tertiary text-decoration-none" href="">
-            <p>Scholarship</p>
-          </a>
-          <a class="text-body-tertiary text-decoration-none" href="">
-            <p>Community</p>
-          </a>
-        </div>
-        <div class="col-sm col-md">
-          <p>Company</p>
-          <a class="text-body-tertiary text-decoration-none" href="">
-            <p>About us</p>
-          </a>
-          <a class="text-body-tertiary text-decoration-none" href="">
-            <p>Our Team</p>
-          </a>
-          <a class="text-body-tertiary text-decoration-none" href="">
-            <p>Our Impact</p>
-          </a>
-        </div>
-      </div>
-      <!-- pembatas dgn copyright -->
-      <hr>
-      <p class="text-body-tertiary"> &copy; 2024 WomenRise3T. All Rights Reserved.</p>
-    </div>
-  </footer>
+  <div id="footer"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="mentor.js"></script>
+  <script src="/script.js"></script>
 </body>
 
 </html>
