continued landing page

--- a/index.html
+++ b/index.html
@@ -68,13 +68,35 @@
     </section>
 
     <!-- Beasiswa Section -->
-    <!-- <section>
-        <div class="container">
-            <h1>Temukan Beasiswa Impianmu!</h1>
-            <p>Jelajahi berbagai beasiswa yang bisa membantu kamu meraih pendidikan lebih tinggi. 
-                Pilih beasiswa yang paling cocok buatmu dan ambil langkah pertama menuju masa depan yang lebih cerah.</p>
+    <article class="background-lightblue border-bottom">
+        <div class="container px-5 px-md-0 py-5">
+            <h2 class="text-center button-style-text fw-bold">Temukan Beasiswa Impianmu!</h2>
+            <p class="text-center px-5 my-0">Jelajahi berbagai beasiswa yang bisa membantu kamu meraih pendidikan lebih tinggi. </p>
+            <p class="text-center px-5 my-0">Pilih beasiswa yang paling cocok buatmu dan ambil langkah pertama menuju masa depan yang lebih cerah.</p>
+            <article class="row">
+                <article class="col">
+                    <div class="card my-4" style="width: 18rem;">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="text-center fw-bold button-style-text">Judul Card</p>
+                            <p class="m-0">Jenjang studi</p>
+                            <p class="m-0">Kriteria biaya</p>
+                            <p class="m-0">Periode</p>
+                        </div>
+                      </div>
+                </article>                
+            </article>
+            <a class="button-style-navy px-3 py-2" href="/mentor/mentor.html">Cek Selengkapnya<img src="gambar/arrow-right.svg"></a>
         </div>
-    </section> -->
+    </article>
+
+    <!-- Mentor Section -->
+    <article>
+        <div class="container px-5 px-md-0 py-5">
+            <h2 class="text-center fw-bold button-style-text">Tanya Mentor!</h2>
+            <p class="text-center">Bingung langkah selanjutnya setelah daftar beasiswa apa? tanya kan aja langsung ke mentor.</p>
+        </div>
+    </article>
 
     <!-- Footer -->
      <div id="footer"></div>
