--- a/index.html
+++ b/index.html
@@ -69,35 +69,57 @@
 
     <!-- Beasiswa Section -->
     <article class="background-lightblue border-bottom">
-        <div class="container px-5 px-md-0 py-5">
+        <div class="container px-5 px-md-0 py-5 text-center">
             <h2 class="text-center button-style-text fw-bold">Temukan Beasiswa Impianmu!</h2>
-            <p class="text-center px-5 my-0">Jelajahi berbagai beasiswa yang bisa membantu kamu meraih pendidikan lebih tinggi. </p>
-            <p class="text-center px-5 my-0">Pilih beasiswa yang paling cocok buatmu dan ambil langkah pertama menuju masa depan yang lebih cerah.</p>
+            <p class="px-5 my-0">Jelajahi berbagai beasiswa yang bisa membantu kamu meraih pendidikan lebih tinggi. </p>
+            <p class="px-5 my-0">Pilih beasiswa yang paling cocok buatmu dan ambil langkah pertama menuju masa depan yang lebih cerah.</p>
             <article class="row">
                 <article class="col">
+                    <!-- <div class="list-mentor"></div> -->
                     <div class="card my-4" style="width: 18rem;">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="text-center fw-bold button-style-text">Judul Card</p>
-                            <p class="m-0">Jenjang studi</p>
-                            <p class="m-0">Kriteria biaya</p>
-                            <p class="m-0">Periode</p>
+                            <p class="m-0 text-start d-flex align-items-center"><img src="gambar/icon/Vector.svg">Jenjang studi</p>
+                            <p class="m-0 text-start d-flex align-items-center"><img src="gambar/icon/money.svg">Kriteria biaya</p>
+                            <p class="m-0 text-start d-flex align-items-center"><img src="gambar/icon/calendar.svg">Periode</p>
                         </div>
                       </div>
                 </article>                
             </article>
-            <a class="button-style-navy px-3 py-2" href="/mentor/mentor.html">Cek Selengkapnya<img src="gambar/arrow-right.svg"></a>
+            <a class="button-style-navy px-3 py-2 d-inline-flex align-items-center" href="/mentor/mentor.html">Cek Selengkapnya<img class="ms-1" src="gambar/arrow-right-white.svg"></a>
         </div>
     </article>
 
     <!-- Mentor Section -->
-    <article>
+    <article class="border-bottom">
         <div class="container px-5 px-md-0 py-5">
             <h2 class="text-center fw-bold button-style-text">Tanya Mentor!</h2>
             <p class="text-center">Bingung langkah selanjutnya setelah daftar beasiswa apa? tanya kan aja langsung ke mentor.</p>
         </div>
     </article>
 
+    <!-- Testimoni Pengguna -->
+     <article class="background-lightblue border-bottom">
+        <div class="container px-5 px-md-0 py-5">
+            <h2 class="text-center fw-bold button-style-text">Testimoni Pengguna</h2>
+
+            <!-- Card -->
+            <div class="card " style="width: 416px; height: 248px;">
+                <div class="card-body ">
+                  <img src="/gambar/icon/petik.svg">
+                  <p class="card-text p-2">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <div class="d-flex align-items-end">
+                    <img src="gambar/icon/avatar.svg">
+                    <div class="d-flex flex-column">
+                        <p class="m-0">Nadia</p>
+                        <p class="m-0">Kalimantan Utara</p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+     </article>
     <!-- Footer -->
      <div id="footer"></div>
      
