--- a/index.html
+++ b/index.html
@@ -105,21 +105,14 @@
             <h2 class="text-center fw-bold button-style-text">Testimoni Pengguna</h2>
 
             <!-- Card -->
-            <div class="card " style="width: 416px; height: 248px;">
-                <div class="card-body ">
-                  <img src="/gambar/icon/petik.svg">
-                  <p class="card-text p-2">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <div class="d-flex align-items-end">
-                    <img src="gambar/icon/avatar.svg">
-                    <div class="d-flex flex-column">
-                        <p class="m-0">Nadia</p>
-                        <p class="m-0">Kalimantan Utara</p>
-                    </div>
-                    </div>
-                </div>
+            <div class="row my-4">
+            <div class="d-flex gap-3" id="list-testi"></div>
+            
             </div>
         </div>
      </article>
+
+     <!-- Frequently Asked Question -->
     <!-- Footer -->
      <div id="footer"></div>
      
