added responsiveness to testimoni

--- a/index.html
+++ b/index.html
@@ -106,13 +106,14 @@
 
             <!-- Card -->
             <div class="row my-4">
-            <div class="d-flex gap-3" id="list-testi"></div>
+            <div class="d-flex gap-3 flex-column flex-lg-row" id="list-testi"></div>
             
             </div>
         </div>
      </article>
 
      <!-- Frequently Asked Question -->
+
     <!-- Footer -->
      <div id="footer"></div>
      
