added sponsor section

--- a/index.html
+++ b/index.html
@@ -179,11 +179,36 @@
     </section>
 
     <!-- Sponsors -->
-    <article class="background-lightblue border-bottom">
+    <section class="background-lightblue border-bottom">
         <div class="container px-5 px-md-0 py-5 text-center">
             <h2 class="button-style-text fw-bold">Sponsors</h2>
+            <div class="row py-4 px-5">
+                <div class="col">
+                    <img src="gambar/sponsor/Logo.svg" height="32" width="auto">
+                </div>
+                <div class="col">
+                    <img src="gambar/sponsor/Logo-1.svg" height="32" width="auto">
+                </div>
+                <div class="col">
+                    <img src="gambar/sponsor/Logo-2.svg" height="32" width="auto">
+                </div>
+                <div class="col">
+                    <img src="gambar/sponsor/Logo-3.svg" height="32" width="auto">
+                </div>
+                <div class="col">
+                    <img src="gambar/sponsor/Logo-4.svg" height="32" width="auto">
+                </div>
+            </div>
         </div>
-    </article>
+    </section>
+
+    <!-- Contact Us -->
+    <section>
+        <div class="container px-5 px-md-0 py-5 text-center">
+            
+        </div>
+    </section>
+
     <!-- Footer -->
      <div id="footer"></div>
      
