added whatsapp and fixed sponsor responsiveness

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <section class="background-lightblue border-bottom">
         <div class="container px-5 px-md-0 py-5 text-center">
             <h2 class="button-style-text fw-bold">Sponsors</h2>
-            <div class="row py-4 px-5">
+            <div class="row py-4 px-5 gy-5">
                 <div class="col">
                     <img src="gambar/sponsor/Logo.svg" height="32" width="auto">
                 </div>
@@ -205,7 +205,8 @@
     <!-- Contact Us -->
     <section>
         <div class="container px-5 px-md-0 py-5 text-center">
-            
+            <h2 class="fw-bold mb-4">Ada pertanyaan? Hubungi kami!</h2>
+            <a class="button-style-navy px-4 py-3 d-inline-flex align-items-end fw-semibold" href="" style="background-color: #00D95F;"><img class="me-2" src="gambar/icon/whatsapp.svg">WhatsApp</a>
         </div>
     </section>
 
