done bagian mentor

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <p class="px-5 my-0">Pilih beasiswa yang paling cocok buatmu dan ambil langkah pertama menuju masa depan yang lebih cerah.</p>
             <article class="row">
                 <article class="col">
-                    <!-- <div class="list-mentor"></div> -->
+                    
                     <div class="card my-4" style="width: 18rem;">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
@@ -96,7 +96,10 @@
         <div class="container px-5 px-md-0 py-5">
             <h2 class="text-center fw-bold button-style-text">Tanya Mentor!</h2>
             <p class="text-center">Bingung langkah selanjutnya setelah daftar beasiswa apa? tanya kan aja langsung ke mentor.</p>
-        </div>
+
+            <!-- card -->
+                <div id="list-mentor" class="row justify-content-center my-5"></div>
+        
     </article>
 
     <!-- Testimoni Pengguna -->
