fixed responsiveness of navbar

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                     </div>                 
                 </div>
 
-                <div class="col-lg-3">
-                    <img src="gambar/girl.svg">
+                <div class="col-lg-3  ">
+                    <img class="custom-img " src="gambar/girl.svg">
                 </div>
             </div>
         </div>
@@ -75,7 +75,7 @@
             <p class="px-5 my-0">Pilih beasiswa yang paling cocok buatmu dan ambil langkah pertama menuju masa depan yang lebih cerah.</p>
 
             <!-- card -->
-            <article class="row justify-content-center my-5 gy-4" id="list-beasiswa">
+            <article class="row justify-content-center my-0 my-md-5 gy-4" id="list-beasiswa">
                                 
             </article>
             <a class="button-style-navy px-3 py-2 d-inline-flex align-items-center" href="">Cek Selengkapnya<img class="ms-1" src="gambar/arrow-right-white.svg"></a>
@@ -89,9 +89,9 @@
             <p class="">Bingung langkah selanjutnya setelah daftar beasiswa apa? tanya kan aja langsung ke mentor.</p>
 
             <!-- card -->
-                <div id="list-mentor" class="row justify-content-center my-5 gy-4"></div>
+                <div id="list-mentor" class="row justify-content-center my-0 my-md-5 gy-4"></div>
             
-            <a class="button-style-navy px-3 py-2 d-inline-flex align-items-center" href="/mentor/mentor.html">Cek Selengkapnya<img class="ms-1" src="gambar/arrow-right-white.svg"></a>
+            <a class="button-style-navy px-3 py-2 mt-4 mt-md-0 d-inline-flex align-items-center" href="/mentor/mentor.html">Cek Selengkapnya<img class="ms-1" src="gambar/arrow-right-white.svg"></a>
             </div>
     </article>
 
