created 2 landing pages for logged and not logged

--- a/Login-page/login.html
+++ b/Login-page/login.html
@@ -21,7 +21,7 @@
     </div>
     <div class="col-md-6">
       <div class="login-form">
-        <h3 class="mb-4 text-center"><img src="WomenRise3T Logo - Original - 5000x5000.png" width="65px" height="55px">WomenRise3T</h3>
+        <a href="/index.html"><h3 class="mb-4 text-center"><img src="WomenRise3T Logo - Original - 5000x5000.png" width="65px" height="55px">WomenRise3T</h3></a>
         <div class="text-danger" id="error-message"></div>
         <form>
           <div class="mb-3">
