--- a/mentor/mentor.html
+++ b/mentor/mentor.html
@@ -25,11 +25,11 @@
 <body>
   <!-- Navigation Menu -->
   <nav class="navbar navbar-expand-lg border-bottom">
-    <div class="container-fluid px-5 py-2 mx-5 d-flex gap-5">
+    <div class="container-fluid px-0 px-lg-5 py-2 mx-5 d-flex gap-5">
         
             <div class="d-flex gap-2 align-items-center">
                 <img src="../gambar/Logo WomenRise3T.svg" width="48" height="auto">
-                <a href="../index.html"><div class="vesper-libre-bold pt-2" id="nav-title">WomenRise3T</div></a>
+                <a href="/landing-page-logged/index.html"><div class="vesper-libre-bold pt-2" id="nav-title">WomenRise3T</div></a>
             </div>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,14 +37,14 @@
             </button>
             
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav navbar-text gap-5 flex-grow-1 ms-5">
-                    <li class="nav-item "><a href="../index.html">Home</a></li>
+                <ul class="navbar-nav navbar-text gap-4 gap-lg-5 flex-grow-1 ms-0 ms-lg-5">
+                    <li class="nav-item "><a href="/landing-page-logged/index.html">Home</a></li>
                     <li class="nav-item"><a href="">Beasiswa</a></li>
                     <li class="nav-item"><a href="/mentor/mentor.html">Mentor</a></li>
                     <li class="nav-item"><a href="">Donasi</a></li>
                 </ul>
 
-                <div class="d-flex gap-2 align-items-center">
+                <div class="my-4 my-lg-0 d-flex gap-2 align-items-center">
                     <a class="btn button-style-outline px-3 py-2" href="">Log Out</a>
                 </div>
             </div>
